--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node ./dist/index.js",
+    "start": "ts-node ./dist/index.js",
     "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,14 +15,14 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.0",
-    "express": "^4.18.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "@types/node": "^20.10.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "express": "^4.18.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   }
 }
